// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiInfoButton Baseline HTML attributes are rendered 1`] = `
<button
  aria-label="aria label"
  class="testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="kuiIcon fa-info-circle"
  />
</button>
`;

exports[`KuiInfoButton Baseline is rendered 1`] = `
<button
  class="kuiInfoButton"
>
  <span
    class="kuiIcon fa-info-circle"
  />
</button>
`;
